[package]
name = "rustorcli"
version = "0.1.0"
authors = ["ainzzorl <ainzzorl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
daemonize = "0.4.1"
dirs = "2.0.2"
nix = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.13.1"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
subprocess = "0.2.4"
