[package]
name = "rustorcli"
version = "0.1.0"
authors = ["ainzzorl <ainzzorl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
daemonize = "0.4.1"
dirs = "2.0.2"
failure = "0.1"
env_logger = "0.7.1"
hex = "0.4.2"
log = "0.4.8"
nix = "0.17.0"
percent-encoding = "2.1.0"
rand = "0.7.3"
reqwest = "0.9.24"
ring = "0.16.11"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "^0.2.1"
serde_bytes = "0.11.3"
serde_derive = "^1.0.0"
serde_json = "1.0"
sysinfo = "0.13.1"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
rayon = "1.3.0"
sha2 = "0.8.1"
subprocess = "0.2.4"
